--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "aos": "^2.3.4",
     "axios": "^1.4.0",
     "daisyui": "^3.5.1",
+    "firebase": "^10.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
