--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0",
     "swiper": "^10.1.0",
+    "swr": "^2.2.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
