--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
   "editor.formatOnSave": true,
-  "cSpell.words": ["Hasina", "hover_img", "Karbar", "noreferrer", "Sekh"]
+  "cSpell.words": ["Hasina", "hover_img", "Karbar", "noreferrer", "Printshop", "Sekh"]
 }
