--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "aos": "^2.3.4",
     "axios": "^1.4.0",
     "chart.js": "^4.4.0",
+    "copy-to-clipboard": "^3.3.3",
     "daisyui": "^3.5.1",
     "firebase": "^10.1.0",
     "react": "^18.2.0",
@@ -23,6 +24,8 @@
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "react-to-pdf": "^1.0.1",
+    "react-to-print": "^2.14.15",
     "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0",
     "swiper": "^10.1.0",
